# Multimodal-Audiofake-Detection

./: .gitignore  README.md  app.py  pyproject.toml  requirements-research.txt  requirements.txt
datasets/: README.md  kaggle_datasets.json
scripts/: benchmark_research.py  cache_features.py  download_kaggle_datasets.py  predict.py  train_research.py
src/trispectra/: __init__.py  constants.py  features.py  inference.py  modeling.py  research_paths.py  web.py
